fix: footer overlapping on output div

--- a/index.css
+++ b/index.css
@@ -12,8 +12,9 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    min-height: 100vh;
     max-width: 100vw;
+    min-height: 100vh;
+    position: relative;
 }
 
 nav {
@@ -29,9 +30,11 @@ nav {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    position: absolute;
+    position: relative;
     height: 70%;
     overflow: auto;
+    padding-bottom: 220px;
+    margin-top: 3rem;
 }
 
 #txt-content {
@@ -95,12 +98,11 @@ textarea:focus {
 }
 
 footer{
-    margin-top: auto;
     background-color: var(--primary-color);
     bottom: 0;
-    position: fixed;
+    position: absolute;
     width: 100%;
     text-align: center;
-    margin: 0;
     padding: 0.5rem;
+    max-height: 200px;
 }
